@@ -1,3 +1,7 @@
+= master
+
+* Remove deprecated Roda.thread_safe_cache and RodaRequest#placeholder_string_matcher? methods (jeremyevans)
+
 = 3.0.0 (2017-09-15)
 
 * Make defined symbol_matcher and hash_matcher match methods private (jeremyevans)
